slightly smaller letter squares to avoid horizontal scrolling

--- a/src/app/components/letter/letter.component.scss
+++ b/src/app/components/letter/letter.component.scss
@@ -1,13 +1,14 @@
 .letter {
   display: inline-block;
-  width: 1ch;
-  height: 1ch;
-  line-height: 1ch;
+  $size: 1.5em;
+  width: $size;
+  height: $size;
+  line-height: $size;
   text-align: center;
-  padding: 0.75ch;
+  box-sizing: border-box;
   border: solid 1px var(--letter-border);
   background: var(--letter-unset);
-  color: var(--text-color);
+  color: var(--helper-text-color);
   font-weight: 700;
   font-size: 2.5em;
   font-family: var(--font-headings);
